# pudlpudl

./: .env.example  .gitignore  ACCOMPLISHMENTS.md  API_REQUIREMENTS.md  API_STATUS.md  ARCHITECTURE.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_PROGRAMS.md  FEATURES.md  FUNCTIONALITY_STATUS.md  GITHUB_SETUP.md  INDEX.md  LICENSE  NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REVENUE_MODEL.md  ROADMAP.md  SETUP_GUIDE.md  SITE_STATUS.md  SOCIAL_MEDIA_POSTS.md  START_HERE.md  TESTING.md  TEST_RESULTS.md  TOKEN_INFO.md  TWITTER_SETUP_GUIDE.md  VERCEL_FINAL_FIX.md  VERCEL_FIX.md  VERCEL_SETUP.md  VERCEL_VISUAL_GUIDE.md  deploy-mainnet.sh  deploy-quick.sh  deploy-to-vercel.sh  (+5 more)
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts  listener.ts
frontend/: .env.production  INTEGRATION_TODO.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AnimatedStats.tsx  Footer.tsx  ImprovedSwapWidget.tsx  LiveTransactions.tsx  Nav.tsx  PageContainer.tsx  ParticleBackground.tsx  PortfolioDashboard.tsx  PriceChart.tsx  TokenSelector.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/lib/: anchor.ts  api.ts  balanceRefresh.ts  config.ts  jupiter.ts  mockData.ts  pudl-sdk.ts  pudlToken.ts  simulation.ts  social.ts  solana.ts  supabase.ts  swapCalculator.ts  tokenMetadata.ts  websocket.ts
programs/pudl-factory/: Cargo.toml
scripts/: deploy.ts  initialize-programs.ts
(+32 files in other folders)
