[workspace]
members = [
    "programs/pudl-factory",
    "programs/pudl-pool",
    "programs/pudl-staking",
    "programs/pudl-treasury",
    "programs/pudl-router",
    "programs/pudl-governance"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
